[gd_scene load_steps=22 format=3 uid="uid://c022a8gxx3h8r"]

[ext_resource type="Script" path="res://Assets/Components/BashComponent/BashComponent.gd" id="1_a88gq"]
[ext_resource type="Shader" path="res://Objects/Enemies/Outline.gdshader" id="2_2cedb"]
[ext_resource type="Texture2D" uid="uid://lo0k4mcdtvo2" path="res://Assets/Sprites/Effects/Arrow.png" id="2_pne23"]
[ext_resource type="Texture2D" uid="uid://brrk3o08luqss" path="res://Assets/Sprites/Effects/Clock.png" id="2_q2tco"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_56obq"]
shader = ExtResource("2_2cedb")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 0.1
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="AtlasTexture" id="AtlasTexture_tjfab"]
atlas = ExtResource("2_q2tco")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2e87l"]
atlas = ExtResource("2_q2tco")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4sm8"]
atlas = ExtResource("2_q2tco")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt8oq"]
atlas = ExtResource("2_q2tco")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8uwa"]
atlas = ExtResource("2_q2tco")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kiffc"]
atlas = ExtResource("2_q2tco")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g6qm"]
atlas = ExtResource("2_q2tco")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yltg6"]
atlas = ExtResource("2_q2tco")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7koo"]
atlas = ExtResource("2_q2tco")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d8or"]
atlas = ExtResource("2_q2tco")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3jr1"]
atlas = ExtResource("2_q2tco")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_we31t"]
atlas = ExtResource("2_q2tco")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pjio1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjfab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e87l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4sm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt8oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8uwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kiffc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g6qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yltg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7koo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d8or")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3jr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we31t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjfab")
}],
"loop": false,
"name": &"TickDown",
"speed": 120.0
}]

[sub_resource type="Animation" id="Animation_af0wc"]
resource_name = "Bash"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Clock:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Clock")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"TickDown", 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Arrow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Clock:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Clock:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.4, 0.4), Vector2(0.4, 0.4), Vector2(2, 2)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Clock:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(2.08165e-12, 10)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Arrow:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1), Vector2(1.3, 0.8)]
}

[sub_resource type="Animation" id="Animation_wlitp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Clock:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arrow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Clock:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Clock:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.2, 0.2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Clock:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Arrow:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s3r3p"]
_data = {
"Bash": SubResource("Animation_af0wc"),
"RESET": SubResource("Animation_wlitp")
}

[node name="BashComponent" type="Area2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource("1_a88gq")
bashType = "Shotgun"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Arrow" type="Marker2D" parent="."]
visible = false
scale = Vector2(1e-05, 1)

[node name="Sprite2D" type="Sprite2D" parent="Arrow"]
texture_filter = 1
material = SubResource("ShaderMaterial_56obq")
position = Vector2(8, 0)
texture = ExtResource("2_pne23")

[node name="Clock" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_pjio1")
animation = &"TickDown"

[node name="BashAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s3r3p")
}
speed_scale = 10.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
